--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "Solving robotics problems through multi-robot approaches."
 
 # URL
 url:                http://127.0.0.1:4000
-baseurl:            
+baseurl:
 permalink:          /:year/:month/:day/:title.html
 
 # Markdown
@@ -57,3 +57,6 @@ collections:
   people:
     output: true
     permalink: /people/:title/index.html
+
+  news_items:
+      output: false
