added jekyll files

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ permalink:          /:year/:month/:day/:title.html
 # Markdown
 markdown:           kramdown
 
+# Plugins
+plugins:
+  - jekyll-scholar
+
 # scholar
 scholar:
   # style: ieee
